--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 .idea/
+/db/users.sqlite
 
 # User-specific stuff
 .idea/**/workspace.xml
